test/error/StThrowNonString.ci
public static class Test
{
	static void Foo() throws
	{
		throw new Test(); //ERROR: The argument of 'throw' must be a string
	}

	public static bool Run()
	{
		return true;
	}
}
